# sessions-in-haskell

./: README.md  effect-sessions.cabal  examples.lhs  popl16artifact.html
Control/: Effect.hs
Control/Effect/: Sessions.hs
Control/Effect/Sessions/: Operations.lhs  Process.lhs
Data/Type/: FiniteMap.lhs  Set.hs
